<resources>
    <!--App level-->
    <string name="app_name">GGSLK Sri Lanka</string>

    <!--Navigation-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_favorites">Favorites</string>
    <string name="navigation_blog">Geek Blog</string>
    <string name="navigation_facebook">Facebook</string>
    <string name="navigation_personal">Personal</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_settings">Settings</string>

    <!--Tabs-->
    <string name="title_events">Events</string>
    <string name="title_news_feed">News Feed</string>
    <string name="title_categories">Categories</string>

    <!--Articles-->
    <string name="text_article_name_default">Article name</string>
    <string name="text_article_author_default">Author</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
