<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/navigation_home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/navigation_favorites" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/navigation_blog" />
        <item
            android:id="@+id/nav_facebook"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/navigation_facebook" />
    </group>

    <item android:title="@string/navigation_personal">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/navigation_profile" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/navigation_settings" />
        </menu>
    </item>

</menu>
